# harfbuzz-example

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  ex-harfbuzz  freetypelib.cpp  hbfont.cpp
src/: fontlib.h  freetypelib.cpp  freetypelib.h  glutils.h  hbfont.cpp  hbfont.h  hbshaper.h  hbtext.h  main.cpp  truetypelib.cpp  truetypelib.h
